# spin-image-classification-demo

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
